--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,36 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>SQLDatabaseAPI</groupId>
+    <groupId>com.p000ison.dev.sqlapi</groupId>
     <artifactId>SQLDatabaseAPI</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <build>
+        <!--The final output name-->
+        <finalName>
+            ${project.artifactId}-${project.version}
+        </finalName>
+
+        <defaultGoal>clean install</defaultGoal>
+
+        <!-- Plugins -->
+        <plugins>
+            <!-- Compilation plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <inherited>false</inherited>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <showDeprecation>true</showDeprecation>
+                    <showWarnings>true</showWarnings>
+                    <fork>true</fork>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
