--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with SQLDatabaseAPI.  If not, see <http://www.gnu.org/licenses/>.
   ~
-  ~ Last modified: 18.12.12 17:26
+  ~ Last modified: 29.12.12 17:46
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
@@ -27,7 +27,22 @@
     <artifactId>SQLDatabaseAPI</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>repo-snap</id>
+            <name>SimpleClans Snapshots</name>
+            <url>http://jenkins.greatmancode.com/plugin/repository/everything/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <!-- Continuous integration -->
+    <ciManagement>
+        <system>jenkins</system>
+        <url>http://jenkins.greatmancode.com/job/${project.name}</url>
+    </ciManagement>
+
     <build>
+
         <!--The final output name-->
         <finalName>
             ${project.artifactId}-${project.version}
@@ -49,6 +64,40 @@
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                     <fork>true</fork>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.8.1</version>
+                <executions>
+                    <execution>
+                        <id>javadoc-jar</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>javadoc</goal>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <quiet>true</quiet>
                 </configuration>
             </plugin>
         </plugins>
