--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.p000ison.dev.sqlapi</groupId>
     <artifactId>SQLDatabaseAPI</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <distributionManagement>
         <snapshotRepository>
